[gd_scene load_steps=10 format=3 uid="uid://dp6f0w6btekma"]

[ext_resource type="Script" path="res://Levels/level1.gd" id="1_4332q"]
[ext_resource type="Texture2D" path="res://Assets/vending no text.png" id="2_d3do1"]
[ext_resource type="PackedScene" uid="uid://c3vfis55kri1f" path="res://Player/player.tscn" id="2_ijapu"]
[ext_resource type="Texture2D" path="res://Assets/rings.png" id="3_kmty0"]
[ext_resource type="PackedScene" uid="uid://bnx0getl4e8be" path="res://UI/pause.tscn" id="5_tr6vn"]
[ext_resource type="PackedScene" path="res://UI/hud.tscn" id="5_w8bp1"]
[ext_resource type="SpriteFrames" path="res://Assets/flashing.tres" id="6_etrxy"]
[ext_resource type="Script" path="res://UI/hud.gd" id="6_nr024"]

[sub_resource type="SpriteFrames" id="SpriteFrames_rny2x"]

[node name="Level" type="Node2D"]
script = ExtResource("1_4332q")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_d3do1")

[node name="Rings" type="Sprite2D" parent="."]
position = Vector2(575, 325)
texture = ExtResource("3_kmty0")

[node name="Player" parent="." instance=ExtResource("2_ijapu")]
position = Vector2(140, 150)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("5_w8bp1")]
script = ExtResource("6_nr024")

[node name="Pause" parent="UI" instance=ExtResource("5_tr6vn")]
visible = false

[node name="Chosen_Space" type="Timer" parent="."]
wait_time = 0.7

[node name="KeyA1" type="AnimatedSprite2D" parent="."]
position = Vector2(923, 181)
scale = Vector2(0.922656, 0.922656)
sprite_frames = ExtResource("6_etrxy")
animation = &"flash"
frame = 7
frame_progress = 1.0

[node name="KeyA2" type="AnimatedSprite2D" parent="."]
position = Vector2(925, 245)
scale = Vector2(0.9375, 0.9375)
sprite_frames = ExtResource("6_etrxy")
animation = &"flash"
frame = 7
frame_progress = 1.0

[node name="KeyA3" type="AnimatedSprite2D" parent="."]
position = Vector2(927, 311)
scale = Vector2(0.938, 0.938)
sprite_frames = ExtResource("6_etrxy")
animation = &"flash"
frame = 7
frame_progress = 1.0

[node name="KeyA4" type="AnimatedSprite2D" parent="."]
position = Vector2(928, 371)
scale = Vector2(0.938, 0.938)
sprite_frames = ExtResource("6_etrxy")
animation = &"flash"
frame = 7
frame_progress = 1.0

[node name="KeyB1" type="AnimatedSprite2D" parent="."]
position = Vector2(986, 179)
scale = Vector2(0.938, 0.938)
sprite_frames = ExtResource("6_etrxy")
animation = &"flash"
frame = 7
frame_progress = 1.0

[node name="KeyB2" type="AnimatedSprite2D" parent="."]
position = Vector2(988, 242)
scale = Vector2(0.938, 0.938)
sprite_frames = ExtResource("6_etrxy")
animation = &"flash"
frame = 7
frame_progress = 1.0

[node name="KeyB3" type="AnimatedSprite2D" parent="."]
position = Vector2(989, 309)
scale = Vector2(0.938, 0.938)
sprite_frames = ExtResource("6_etrxy")
animation = &"flash"
frame = 7
frame_progress = 1.0

[node name="KeyB4" type="AnimatedSprite2D" parent="."]
position = Vector2(988, 371)
scale = Vector2(0.938, 0.938)
sprite_frames = ExtResource("6_etrxy")
animation = &"flash"
frame = 7
frame_progress = 1.0

[node name="KeyC1" type="AnimatedSprite2D" parent="."]
position = Vector2(1047, 176)
scale = Vector2(0.938, 0.938)
sprite_frames = ExtResource("6_etrxy")
animation = &"flash"
frame = 7
frame_progress = 1.0

[node name="KeyC2" type="AnimatedSprite2D" parent="."]
position = Vector2(1051, 243)
scale = Vector2(0.938, 0.938)
sprite_frames = ExtResource("6_etrxy")
animation = &"flash"
frame = 7
frame_progress = 1.0

[node name="KeyC3" type="AnimatedSprite2D" parent="."]
position = Vector2(1050, 311)
scale = Vector2(0.938, 0.938)
sprite_frames = ExtResource("6_etrxy")
animation = &"flash"
frame = 7
frame_progress = 1.0

[node name="KeyC4" type="AnimatedSprite2D" parent="."]
position = Vector2(1051, 371)
scale = Vector2(0.938, 0.938)
sprite_frames = ExtResource("6_etrxy")
animation = &"flash"
frame = 7
frame_progress = 1.0

[node name="SpaceA1" type="AnimatedSprite2D" parent="."]
position = Vector2(1204, 246)
scale = Vector2(0.3125, 0.3125)
sprite_frames = SubResource("SpriteFrames_rny2x")

[node name="SpaceA2" type="AnimatedSprite2D" parent="."]
position = Vector2(1252, 242)
scale = Vector2(0.3125, 0.3125)
animation = &""

[node name="SpaceA3" type="AnimatedSprite2D" parent="."]
position = Vector2(1293, 245)
scale = Vector2(0.3125, 0.3125)
animation = &""

[node name="SpaceA4" type="AnimatedSprite2D" parent="."]
position = Vector2(1327, 242)
scale = Vector2(0.3125, 0.3125)
animation = &""

[node name="SpaceB1" type="AnimatedSprite2D" parent="."]
position = Vector2(1206, 286)
scale = Vector2(0.3125, 0.3125)
animation = &""

[node name="SpaceB2" type="AnimatedSprite2D" parent="."]
position = Vector2(1246, 286)
scale = Vector2(0.3125, 0.3125)
animation = &""

[node name="SpaceB3" type="AnimatedSprite2D" parent="."]
position = Vector2(1287, 278)
scale = Vector2(0.3125, 0.3125)
animation = &""

[node name="SpaceB4" type="AnimatedSprite2D" parent="."]
position = Vector2(1327, 281)
scale = Vector2(0.3125, 0.3125)
animation = &""

[node name="SpaceC1" type="AnimatedSprite2D" parent="."]
position = Vector2(1208, 323)
scale = Vector2(0.3125, 0.3125)
animation = &""

[node name="SpaceC2" type="AnimatedSprite2D" parent="."]
position = Vector2(1241, 322)
scale = Vector2(0.3125, 0.3125)
animation = &""

[node name="SpaceC3" type="AnimatedSprite2D" parent="."]
position = Vector2(1280, 325)
scale = Vector2(0.3125, 0.3125)
animation = &""

[node name="SpaceC4" type="AnimatedSprite2D" parent="."]
position = Vector2(1319, 323)
scale = Vector2(0.3125, 0.3125)
animation = &""

[connection signal="timeout" from="Chosen_Space" to="." method="_on_chosen_space_timeout"]
[connection signal="animation_finished" from="KeyA1" to="." method="_on_key_a_1_animation_finished"]
[connection signal="animation_finished" from="KeyA2" to="." method="_on_key_a_2_animation_finished"]
[connection signal="animation_finished" from="KeyA3" to="." method="_on_key_a_3_animation_finished"]
[connection signal="animation_finished" from="KeyA4" to="." method="_on_key_a_4_animation_finished"]
[connection signal="animation_finished" from="KeyB1" to="." method="_on_key_b_1_animation_finished"]
[connection signal="animation_finished" from="KeyB2" to="." method="_on_key_b_2_animation_finished"]
[connection signal="animation_finished" from="KeyB3" to="." method="_on_key_b_3_animation_finished"]
[connection signal="animation_finished" from="KeyB4" to="." method="_on_key_b_4_animation_finished"]
[connection signal="animation_finished" from="KeyC1" to="." method="_on_key_c_1_animation_finished"]
[connection signal="animation_finished" from="KeyC2" to="." method="_on_key_c_2_animation_finished"]
[connection signal="animation_finished" from="KeyC3" to="." method="_on_key_c_3_animation_finished"]
[connection signal="animation_finished" from="KeyC4" to="." method="_on_key_c_4_animation_finished"]
